src/libqtextformat.bf

public struct QTextBlockFormat
{
	[LinkName("QTextBlockFormat_new")]
	public static extern void* QTextBlockFormat_new();
	[LinkName("QTextBlockFormat_new2")]
	public static extern void* QTextBlockFormat_new2(QTextBlockFormat param1);
	[LinkName("QTextBlockFormat_IsValid")]
	public static extern bool QTextBlockFormat_IsValid(void* c_this);
	[LinkName("QTextBlockFormat_SetAlignment")]
	public static extern void QTextBlockFormat_SetAlignment(void* c_this, int64 alignment);
	[LinkName("QTextBlockFormat_Alignment")]
	public static extern int64 QTextBlockFormat_Alignment(void* c_this);
	[LinkName("QTextBlockFormat_SetTopMargin")]
	public static extern void QTextBlockFormat_SetTopMargin(void* c_this, double margin);
	[LinkName("QTextBlockFormat_TopMargin")]
	public static extern double QTextBlockFormat_TopMargin(void* c_this);
	[LinkName("QTextBlockFormat_SetBottomMargin")]
	public static extern void QTextBlockFormat_SetBottomMargin(void* c_this, double margin);
	[LinkName("QTextBlockFormat_BottomMargin")]
	public static extern double QTextBlockFormat_BottomMargin(void* c_this);
	[LinkName("QTextBlockFormat_SetLeftMargin")]
	public static extern void QTextBlockFormat_SetLeftMargin(void* c_this, double margin);
	[LinkName("QTextBlockFormat_LeftMargin")]
	public static extern double QTextBlockFormat_LeftMargin(void* c_this);
	[LinkName("QTextBlockFormat_SetRightMargin")]
	public static extern void QTextBlockFormat_SetRightMargin(void* c_this, double margin);
	[LinkName("QTextBlockFormat_RightMargin")]
	public static extern double QTextBlockFormat_RightMargin(void* c_this);
	[LinkName("QTextBlockFormat_SetTextIndent")]
	public static extern void QTextBlockFormat_SetTextIndent(void* c_this, double aindent);
	[LinkName("QTextBlockFormat_TextIndent")]
	public static extern double QTextBlockFormat_TextIndent(void* c_this);
	[LinkName("QTextBlockFormat_SetIndent")]
	public static extern void QTextBlockFormat_SetIndent(void* c_this, int32 indent);
	[LinkName("QTextBlockFormat_Indent")]
	public static extern int32 QTextBlockFormat_Indent(void* c_this);
	[LinkName("QTextBlockFormat_SetHeadingLevel")]
	public static extern void QTextBlockFormat_SetHeadingLevel(void* c_this, int32 alevel);
	[LinkName("QTextBlockFormat_HeadingLevel")]
	public static extern int32 QTextBlockFormat_HeadingLevel(void* c_this);
	[LinkName("QTextBlockFormat_SetLineHeight")]
	public static extern void QTextBlockFormat_SetLineHeight(void* c_this, double height, int32 heightType);
	[LinkName("QTextBlockFormat_LineHeight")]
	public static extern double QTextBlockFormat_LineHeight(void* c_this, double scriptLineHeight, double scaling);
	[LinkName("QTextBlockFormat_LineHeight2")]
	public static extern double QTextBlockFormat_LineHeight2(void* c_this);
	[LinkName("QTextBlockFormat_LineHeightType")]
	public static extern int32 QTextBlockFormat_LineHeightType(void* c_this);
	[LinkName("QTextBlockFormat_SetNonBreakableLines")]
	public static extern void QTextBlockFormat_SetNonBreakableLines(void* c_this, bool b);
	[LinkName("QTextBlockFormat_NonBreakableLines")]
	public static extern bool QTextBlockFormat_NonBreakableLines(void* c_this);
	[LinkName("QTextBlockFormat_SetPageBreakPolicy")]
	public static extern void QTextBlockFormat_SetPageBreakPolicy(void* c_this, int64 flags);
	[LinkName("QTextBlockFormat_PageBreakPolicy")]
	public static extern int64 QTextBlockFormat_PageBreakPolicy(void* c_this);
	[LinkName("QTextBlockFormat_SetTabPositions")]
	public static extern void QTextBlockFormat_SetTabPositions(void* c_this, QTextOption__Tab[] tabs);
	[LinkName("QTextBlockFormat_TabPositions")]
	public static extern QTextOption__Tab[] QTextBlockFormat_TabPositions(void* c_this);
	[LinkName("QTextBlockFormat_SetMarker")]
	public static extern void QTextBlockFormat_SetMarker(void* c_this, int64 marker);
	[LinkName("QTextBlockFormat_Marker")]
	public static extern int64 QTextBlockFormat_Marker(void* c_this);
}
public struct QTextListFormat
{
	[LinkName("QTextListFormat_new")]
	public static extern void* QTextListFormat_new();
	[LinkName("QTextListFormat_new2")]
	public static extern void* QTextListFormat_new2(QTextListFormat param1);
	[LinkName("QTextListFormat_IsValid")]
	public static extern bool QTextListFormat_IsValid(void* c_this);
	[LinkName("QTextListFormat_SetStyle")]
	public static extern void QTextListFormat_SetStyle(void* c_this, int64 style);
	[LinkName("QTextListFormat_Style")]
	public static extern int64 QTextListFormat_Style(void* c_this);
	[LinkName("QTextListFormat_SetIndent")]
	public static extern void QTextListFormat_SetIndent(void* c_this, int32 indent);
	[LinkName("QTextListFormat_Indent")]
	public static extern int32 QTextListFormat_Indent(void* c_this);
	[LinkName("QTextListFormat_SetNumberPrefix")]
	public static extern void QTextListFormat_SetNumberPrefix(void* c_this, char8[] numberPrefix);
	[LinkName("QTextListFormat_NumberPrefix")]
	public static extern char8[] QTextListFormat_NumberPrefix(void* c_this);
	[LinkName("QTextListFormat_SetNumberSuffix")]
	public static extern void QTextListFormat_SetNumberSuffix(void* c_this, char8[] numberSuffix);
	[LinkName("QTextListFormat_NumberSuffix")]
	public static extern char8[] QTextListFormat_NumberSuffix(void* c_this);
}
public struct QTextImageFormat
{
	[LinkName("QTextImageFormat_new")]
	public static extern void* QTextImageFormat_new();
	[LinkName("QTextImageFormat_IsValid")]
	public static extern bool QTextImageFormat_IsValid(void* c_this);
	[LinkName("QTextImageFormat_SetName")]
	public static extern void QTextImageFormat_SetName(void* c_this, char8[] name);
	[LinkName("QTextImageFormat_Name")]
	public static extern char8[] QTextImageFormat_Name(void* c_this);
	[LinkName("QTextImageFormat_SetWidth")]
	public static extern void QTextImageFormat_SetWidth(void* c_this, double width);
	[LinkName("QTextImageFormat_Width")]
	public static extern double QTextImageFormat_Width(void* c_this);
	[LinkName("QTextImageFormat_SetHeight")]
	public static extern void QTextImageFormat_SetHeight(void* c_this, double height);
	[LinkName("QTextImageFormat_Height")]
	public static extern double QTextImageFormat_Height(void* c_this);
	[LinkName("QTextImageFormat_SetQuality")]
	public static extern void QTextImageFormat_SetQuality(void* c_this, int32 quality);
	[LinkName("QTextImageFormat_SetQuality2")]
	public static extern void QTextImageFormat_SetQuality2(void* c_this);
	[LinkName("QTextImageFormat_Quality")]
	public static extern int32 QTextImageFormat_Quality(void* c_this);
}
public struct QTextFrameFormat
{
	[LinkName("QTextFrameFormat_new")]
	public static extern void* QTextFrameFormat_new();
	[LinkName("QTextFrameFormat_new2")]
	public static extern void* QTextFrameFormat_new2(QTextFrameFormat param1);
	[LinkName("QTextFrameFormat_IsValid")]
	public static extern bool QTextFrameFormat_IsValid(void* c_this);
	[LinkName("QTextFrameFormat_SetPosition")]
	public static extern void QTextFrameFormat_SetPosition(void* c_this, int64 f);
	[LinkName("QTextFrameFormat_Position")]
	public static extern int64 QTextFrameFormat_Position(void* c_this);
	[LinkName("QTextFrameFormat_SetBorder")]
	public static extern void QTextFrameFormat_SetBorder(void* c_this, double border);
	[LinkName("QTextFrameFormat_Border")]
	public static extern double QTextFrameFormat_Border(void* c_this);
	[LinkName("QTextFrameFormat_SetBorderBrush")]
	public static extern void QTextFrameFormat_SetBorderBrush(void* c_this, QBrush brush);
	[LinkName("QTextFrameFormat_BorderBrush")]
	public static extern QBrush QTextFrameFormat_BorderBrush(void* c_this);
	[LinkName("QTextFrameFormat_SetBorderStyle")]
	public static extern void QTextFrameFormat_SetBorderStyle(void* c_this, int64 style);
	[LinkName("QTextFrameFormat_BorderStyle")]
	public static extern int64 QTextFrameFormat_BorderStyle(void* c_this);
	[LinkName("QTextFrameFormat_SetMargin")]
	public static extern void QTextFrameFormat_SetMargin(void* c_this, double margin);
	[LinkName("QTextFrameFormat_Margin")]
	public static extern double QTextFrameFormat_Margin(void* c_this);
	[LinkName("QTextFrameFormat_SetTopMargin")]
	public static extern void QTextFrameFormat_SetTopMargin(void* c_this, double margin);
	[LinkName("QTextFrameFormat_TopMargin")]
	public static extern double QTextFrameFormat_TopMargin(void* c_this);
	[LinkName("QTextFrameFormat_SetBottomMargin")]
	public static extern void QTextFrameFormat_SetBottomMargin(void* c_this, double margin);
	[LinkName("QTextFrameFormat_BottomMargin")]
	public static extern double QTextFrameFormat_BottomMargin(void* c_this);
	[LinkName("QTextFrameFormat_SetLeftMargin")]
	public static extern void QTextFrameFormat_SetLeftMargin(void* c_this, double margin);
	[LinkName("QTextFrameFormat_LeftMargin")]
	public static extern double QTextFrameFormat_LeftMargin(void* c_this);
	[LinkName("QTextFrameFormat_SetRightMargin")]
	public static extern void QTextFrameFormat_SetRightMargin(void* c_this, double margin);
	[LinkName("QTextFrameFormat_RightMargin")]
	public static extern double QTextFrameFormat_RightMargin(void* c_this);
	[LinkName("QTextFrameFormat_SetPadding")]
	public static extern void QTextFrameFormat_SetPadding(void* c_this, double padding);
	[LinkName("QTextFrameFormat_Padding")]
	public static extern double QTextFrameFormat_Padding(void* c_this);
	[LinkName("QTextFrameFormat_SetWidth")]
	public static extern void QTextFrameFormat_SetWidth(void* c_this, double width);
	[LinkName("QTextFrameFormat_SetWidthWithLength")]
	public static extern void QTextFrameFormat_SetWidthWithLength(void* c_this, QTextLength length);
	[LinkName("QTextFrameFormat_Width")]
	public static extern QTextLength QTextFrameFormat_Width(void* c_this);
	[LinkName("QTextFrameFormat_SetHeight")]
	public static extern void QTextFrameFormat_SetHeight(void* c_this, double height);
	[LinkName("QTextFrameFormat_SetHeightWithHeight")]
	public static extern void QTextFrameFormat_SetHeightWithHeight(void* c_this, QTextLength height);
	[LinkName("QTextFrameFormat_Height")]
	public static extern QTextLength QTextFrameFormat_Height(void* c_this);
	[LinkName("QTextFrameFormat_SetPageBreakPolicy")]
	public static extern void QTextFrameFormat_SetPageBreakPolicy(void* c_this, int64 flags);
	[LinkName("QTextFrameFormat_PageBreakPolicy")]
	public static extern int64 QTextFrameFormat_PageBreakPolicy(void* c_this);
}
